# link-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
backend/: alembic.ini  pyproject.toml  seed_calendar.py
backend/alembic/: env.py
backend/alembic/versions/: 0a001e882835_initial_schema.py  612e85bd5c3d_add_stage_column_to_drafts.py  b2f3a4c5d6e7_add_uploaded_file_text_and_source.py  c3d4e5f6a7b8_add_typefully_draft_id_to_posts.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: checkpointer.py  edges.py  graph.py  state.py
backend/app/agent/nodes/: approve.py  draft.py  generate_image.py  optimize.py  proofread.py  research.py
backend/app/agent/prompts/: framework.py  image_prompt.py  leader_lens.py  optimize.py  proofread.py  research.py  simplification.py  story.py  strong_pov.py
backend/app/api/: agent.py  calendar.py  health.py  posts.py  router.py  settings.py  typefully.py  uploads.py
backend/app/models/: __init__.py  calendar_entry.py  media_asset.py  post.py  user_settings.py
backend/app/schemas/: agent.py  calendar.py  media.py  post.py  settings.py
backend/app/services/: file_parser.py  image_gen.py  llm.py  tavily_search.py  typefully.py  web_research.py
backend/app/utils/: linkedin.py
docs/: LinkedIn Analysis.md  req.md
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useAgent.ts  useCalendar.ts  usePosts.ts  useSSE.ts  useSettings.ts
frontend/src/lib/: api.ts  constants.ts  types.ts
frontend/src/utils/: formatDate.ts  (+1 more)
(+35 files in other folders)
